# swm

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: agibot_domain_generation_have_template.py  change_resolution.py  count_close_loop_numbers.py  del_fail_episode.py  domain_generation.py  eval_keyframe.py  eval_planning.py  eval_vlm_cot.py  eval_without_cot.py  find_fail_episode.py  instruction_aug_generation.py  keyframe_baseline.py  plan_reorder.py  remove_type.py  reranker.py  retrieve_two_stages.py  run_domain_generation.py  run_keyframe.py  sharegpt.py  steps_generation.py
src/swm/keyframe/: extraction.py  tools.py
src/swm/prompt_templates/: pddl_generation.txt  pddl_generation_with_feedback.txt  pddl_judge.txt  plan_learning-only_two_frames.txt  plan_learning.txt  plan_learning_with_feedback.txt  training_input.txt  vlm_cot.txt
src/swm/utils/: apis.py  build_train_data.py  construct_prompt.py  plan_learning.py
src/swm/utils/pddl/: generation.py  judge.py  plan_reorder.py  planer.py  retrieve.py  translate.py
tasks/instructions/: instructions_test.json
